--- a/.github/workflows/bot.yml
+++ b/.github/workflows/bot.yml
@@ -1,4 +1,4 @@
-name: DevHub Bot (Reusable)
+name: DevHub Bot
 
 on:
   workflow_call:
@@ -6,13 +6,13 @@ on:
       thank_you_message:
         description: 'Message when PR follows conventional commits'
         required: false
-        default: "🤖 **DevHub Bot**\n\nThank you for opening this PR! Repo maintainers will review it ASAP 🚀"
+        default: 'Thank you for opening this PR! Repo maintainers will review it ASAP 🚀'
         type: string
 
       merge_thank_you_message:
         description: 'Message when PR is merged'
         required: false
-        default: "🎉 **DevHub Bot**\n\nThank you for contributing to Open DevHub! Your work is appreciated 💙"
+        default: '🎉 Thank you for contributing to Open DevHub! We appreciate your work.'
         type: string
 
     secrets:
@@ -40,12 +40,13 @@ jobs:
         with:
           github-token: ${{ steps.app-token.outputs.token }}
           script: |
-            const { owner, repo } = context.repo;
-            const pr = context.payload.pull_request.number;
-
             const commits = await github.paginate(
               github.rest.pulls.listCommits,
-              { owner, repo, pull_number: pr }
+              {
+                owner: context.repo.owner,
+                repo: context.repo.repo,
+                pull_number: context.payload.pull_request.number
+              }
             );
 
             const messages = commits.map(c => c.commit.message);
@@ -56,19 +57,18 @@ jobs:
         run: |
           echo '${{ steps.commits.outputs.messages }}' > commits.json
 
-          PASS=true
+          FOUND=false
           LABELS=""
 
           while read -r msg; do
             if [[ "$msg" =~ ^(feat|fix|docs|style|refactor|perf|test|chore)(\(.+\))?:\ .+ ]]; then
+              FOUND=true
               TYPE=$(echo "$msg" | sed -E 's/^([a-z]+).*/\1/')
               LABELS="$LABELS $TYPE"
-            else
-              PASS=false
             fi
           done < <(jq -r '.[]' commits.json)
 
-          echo "pass=$PASS" >> $GITHUB_OUTPUT
+          echo "pass=$FOUND" >> $GITHUB_OUTPUT
           echo "labels=$(echo $LABELS | tr ' ' '\n' | sort -u | tr '\n' ',' | sed 's/,$//')" >> $GITHUB_OUTPUT
 
       - name: Apply labels
@@ -77,12 +77,11 @@ jobs:
         with:
           github-token: ${{ steps.app-token.outputs.token }}
           script: |
-            const labels = "${{ steps.analyze.outputs.labels }}".split(",");
             await github.rest.issues.addLabels({
               owner: context.repo.owner,
               repo: context.repo.repo,
               issue_number: context.payload.pull_request.number,
-              labels
+              labels: "${{ steps.analyze.outputs.labels }}".split(",")
             });
 
       - name: Create check run
@@ -96,12 +95,14 @@ jobs:
               name: "DevHub Bot / Conventional Commits",
               head_sha: context.payload.pull_request.head.sha,
               status: "completed",
-              conclusion: "${{ steps.analyze.outputs.pass }}" === "true" ? "success" : "failure",
+              conclusion: "${{ steps.analyze.outputs.pass }}" === "true"
+                ? "success"
+                : "failure",
               output: {
                 title: "Conventional Commits",
                 summary: "${{ steps.analyze.outputs.pass }}" === "true"
-                  ? "All commits follow Conventional Commits 🎉"
-                  : "Some commits do NOT follow Conventional Commits"
+                  ? "At least one commit follows Conventional Commits."
+                  : "No commits follow Conventional Commits."
               }
             });
 
@@ -141,3 +142,31 @@ jobs:
               issue_number: context.payload.pull_request.number,
               body: `${{ inputs.merge_thank_you_message }}`
             });
+
+  issue-opened:
+    if: github.event_name == 'issues' && github.event.action == 'opened'
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Generate DevHub Bot token
+        id: app-token
+        uses: actions/create-github-app-token@v1
+        with:
+          app-id: ${{ secrets.DEVHUB_APP_ID }}
+          private-key: ${{ secrets.DEVHUB_APP_PRIVATE_KEY }}
+
+      - name: Add bug label if title contains "bug"
+        uses: actions/github-script@v7
+        with:
+          github-token: ${{ steps.app-token.outputs.token }}
+          script: |
+            const title = context.payload.issue.title.toLowerCase();
+
+            if (title.includes("bug")) {
+              await github.rest.issues.addLabels({
+                owner: context.repo.owner,
+                repo: context.repo.repo,
+                issue_number: context.payload.issue.number,
+                labels: ["bug"]
+              });
+            }
