--- a/.github/workflows/bot.yml
+++ b/.github/workflows/bot.yml
@@ -122,7 +122,6 @@ jobs:
               body
             });
 
-      # 🔽 CHECKS LAST — NEVER BLOCK
       - name: Super Linter (non-blocking)
         continue-on-error: true
         uses: super-linter/super-linter@v8.4.0
@@ -168,16 +167,67 @@ jobs:
           app-id: ${{ secrets.DEVHUB_APP_ID }}
           private-key: ${{ secrets.DEVHUB_APP_PRIVATE_KEY }}
 
-      - name: Add bug label
+      - name: Handle new issue (labels + comment)
         uses: actions/github-script@v7
         with:
           github-token: ${{ steps.app-token.outputs.token }}
           script: |
-            if (context.payload.issue.title.toLowerCase().includes("bug")) {
+            const issue = context.payload.issue;
+
+            const text = `${issue.title}\n${issue.body || ""}`.toLowerCase();
+
+            const labels = new Set();
+
+            const rules = [
+              {
+                keywords: ["bug", "error", "crash", "fail"],
+                label: "bug",
+              },
+              {
+                keywords: ["feature", "request", "enhancement"],
+                label: "enhancement",
+              },
+              {
+                keywords: ["doc", "docs", "readme"],
+                label: "documentation",
+              },
+              {
+                keywords: ["question", "help"],
+                label: "question",
+              },
+            ];
+
+            for (const rule of rules) {
+              if (rule.keywords.some((k) => text.includes(k))) {
+                labels.add(rule.label);
+              }
+            }
+
+            if (labels.size > 0) {
               await github.rest.issues.addLabels({
                 owner: context.repo.owner,
                 repo: context.repo.repo,
-                issue_number: context.payload.issue.number,
-                labels: ["bug"]
+                issue_number: issue.number,
+                labels: Array.from(labels),
               });
             }
+
+            const commentLines = [
+              "👋 **Thanks for opening this issue!**",
+              "",
+              "The Open DevHub maintainers have been notified and will review it as soon as possible 🚀",
+              "",
+              "📌 **Tips to speed things up:**",
+              "- Provide clear steps to reproduce (if it's a bug)",
+              "- Attach screenshots or logs if relevant",
+              "- Mention expected vs actual behavior",
+              "",
+              "We appreciate your contribution 💙",
+            ];
+
+            await github.rest.issues.createComment({
+              owner: context.repo.owner,
+              repo: context.repo.repo,
+              issue_number: issue.number,
+              body: commentLines.join("\n"),
+            });
